Fix alignment on ...

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -552,13 +552,13 @@ object, embed, video, iframe {
                             span {
                                 background: none;
                                 border: 0;
-                                bottom: 6px;
+                                bottom: 3px;
                                 display: inline-block;
                                 height: 6px;
                                 line-height: 6px;
                                 margin-left: 5px;
                                 position: relative;
-                                vertical-align: text-bottom;
+                                vertical-align: bottom;
                                 width: 21px;
 
                                 img {
